--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
     let guessCount = 1;
     let resetButton;
+    guessField.focus();
 
 function checkGuess() {
   const userGuess = Number(guessField.value);
