--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
     <div class="form">
       <label for="guessField">Enter a guess: </label>
-      <input type="number" id="guessField" class="guessField">
+      <input type="number" id="guessField" class="guessField" min="1" max="100" maxlength="3"
+      pattern="^([0-9]|[1-9][0-9]|100)$">
       <input type="submit" value="Submit guess" class="guessSubmit">
     </div>
 
