--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ function resetGame() {
   guessField.value = '';
   guessField.focus();
 
-  lastResult.style.backgroundColor = 'white';
+  lastResult.style.backgroundColor = 'aqua';
 
   randomNumber = Math.floor(Math.random() * 100) + 1;
 }
